add idea table elements and basic functionality

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -11,3 +11,18 @@
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
+a.panel-link {
+  text-decoration: none;
+}
+
+a.panel-link {
+  color: inherit;
+}
+
+a.panel-link .panel:hover .panel-body {
+  background-color: #eee;
+}
+
+a.panel-link .panel:hover.panel-default .panel-heading {
+  background-color: #eee;
+}
