basic activity: text-link

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -26,3 +26,6 @@ a.panel-link .panel:hover .panel-body {
 a.panel-link .panel:hover.panel-default .panel-heading {
   background-color: #eee;
 }
+
+// Web
+@import "components/activities";
