--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -11,6 +11,9 @@
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
+// Web
+@import "components/activities";
+
 a.panel-link {
   text-decoration: none;
 }
@@ -27,5 +30,6 @@ a.panel-link .panel:hover.panel-default .panel-heading {
   background-color: #eee;
 }
 
-// Web
-@import "components/activities";
+figcaption {
+	font-style: italic !important;
+}
