--- a/resources/assets/sass/components/_activities.scss
+++ b/resources/assets/sass/components/_activities.scss
@@ -4,7 +4,11 @@
 	}
 
 	label.instruction {
-	  font-size: 115%;
+	  font-size: 120%;
+	}
+
+	p.idea-desc {
+	font-size: 120%;
 	}
 
 	.no-marg-top {
@@ -18,6 +22,6 @@
 
 #text-link {
 	.panel.input {
-		margin-top: 10px;
+		/*margin-top: 10px;*/
 	}
 }
