responsive idea image/text layout
- changed task copy for add a story
- made idea image/desc layout responsive

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -33,3 +33,28 @@ a.panel-link .panel:hover.panel-default .panel-heading {
 figcaption {
 	font-style: italic !important;
 }
+
+.idea-img {
+	float: none;
+	max-width: 100%;
+	margin-bottom: 20px;
+}
+
+.idea-name-text {
+	max-width: 100%;
+}
+
+@media screen and (min-width: 576px) {
+    .idea-img {
+        float: left;
+		margin-right: 22px;
+		max-width: 30%;
+    }
+    .idea-name-text {
+        float: left;
+		max-width: 60%;
+    }
+    .idea-img img {
+    	max-height: 250px;
+    }
+}
