--- a/resources/assets/sass/components/_activities.scss
+++ b/resources/assets/sass/components/_activities.scss
@@ -8,7 +8,7 @@
 	}
 
 	p.idea-desc {
-	font-size: 120%;
+		// font-size: 120%;
 	}
 
 	.no-marg-top {
@@ -17,6 +17,10 @@
 
 	.no-marg-bot {
 		margin-bottom: 0;
+	}
+
+	blockquote {
+		font-size: 100%;
 	}
 }
 
