add footer, nav changes, privacy policy

--- a/resources/assets/sass/components/_addons.scss
+++ b/resources/assets/sass/components/_addons.scss
@@ -37,6 +37,7 @@ figcaption {
 }
 
 .footer {
+  margin-top: 15px;
   margin-bottom: 15px;
 }
 
@@ -59,6 +60,7 @@ figcaption {
     }
 
     .footer {
+      margin-top: 40px;
       margin-bottom: 75px;
     }
 }
