--- a/resources/assets/sass/components/_addons.scss
+++ b/resources/assets/sass/components/_addons.scss
@@ -18,10 +18,6 @@ a.panel-link .panel-heading:hover {
   background-color: #eee;
 }
 
-figcaption {
-	font-style: italic !important;
-}
-
 .idea-img {
 	float: none;
 	max-width: 100%;
@@ -36,31 +32,37 @@ figcaption {
   font-size: 87.5%;
 }
 
-.footer {
+/*.footer {
   margin-top: 15px;
   margin-bottom: 15px;
+}*/
+
+@media screen and (min-width: 992px) {
+  .rwd-break {
+    display: none;
+  }
 }
 
 @media screen and (min-width: 576px) {
-    .idea-img {
-        float: left;
-		margin-right: 22px;
-		max-width: 30%;
-    }
-    .idea-name-text {
-        float: left;
-		max-width: 60%;
-    }
-    .idea-img img {
-    	max-height: 250px;
-    }
+  .idea-img {
+      float: left;
+	 margin-right: 22px;
+	 max-width: 30%;
+  }
+  .idea-name-text {
+      float: left;
+	max-width: 60%;
+  }
+  .idea-img img {
+  	max-height: 250px;
+  }
 
-    #el-nudillo-map {
-      max-height: 250px;
-    }
+  #el-nudillo-map {
+    max-height: 250px;
+  }
 
-    .footer {
-      margin-top: 40px;
-      margin-bottom: 75px;
-    }
+/*  .footer {
+    margin-top: 40px;
+    margin-bottom: 75px;
+  }*/
 }
