--- a/resources/assets/sass/components/_activities.scss
+++ b/resources/assets/sass/components/_activities.scss
@@ -22,6 +22,35 @@
 	blockquote {
 		font-size: 100%;
 	}
+
+	.list-group {
+		.list-group-item {
+			&#idea {
+				h2 {
+					margin-bottom: 0;
+				}
+
+				p + p {
+					padding-top: $padding-base-vertical;
+				}
+			}
+
+			&.dark {
+				background-color: $task-bg-color;
+
+				h3 {
+					color: #fff;
+					font-weight: 700;
+					margin-bottom: $line-height-computed;
+				}
+			}
+		}
+	}
+
+	a#skip {
+		padding: 12px 18px;
+		font-weight: 700;
+	}
 }
 
 #text-link {
