minor UI changes

--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -37,6 +37,7 @@ $navbar-default-link-active-color: darken($navbar-default-link-color, 19.5%) !de
 
 
 // Buttons
+$btn-font-weight: 700;
 $btn-default-color: $text-color;
 
 // Inputs
