--- a/resources/assets/sass/components/_global.scss
+++ b/resources/assets/sass/components/_global.scss
@@ -11,6 +11,10 @@ body {
   margin-bottom: $footer-height;
 }
 
+nav {
+  font-weight: 500;
+}
+
 .footer {
   position: absolute;
   bottom: 0;
@@ -114,7 +118,6 @@ figure {
 .btn {
   text-transform: uppercase;
   padding: 12px 18px;
-  font-weight: 700;
   box-shadow: $shadow-default;
 }
 
