--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -27,6 +27,8 @@ $font-size-base: 14px;
 $line-height-base: 1.6;
 $text-color: #636b6f;
 $link-color: $brand-default;
+$heading-color: #000;
+$accent-color: #4A90E2;
 
 // Navbar
 $navbar-default-bg: $brand-primary;
