--- a/resources/assets/sass/components/_mainmenu.scss
+++ b/resources/assets/sass/components/_mainmenu.scss
@@ -10,9 +10,7 @@
 		}
 	}
 
-	a {
-		&.btn {
-			margin-bottom: $line-height-computed;
-		}
+	section {
+		margin-bottom: $line-height-computed;
 	}
 }
