--- a/resources/assets/sass/components/_global.scss
+++ b/resources/assets/sass/components/_global.scss
@@ -50,6 +50,10 @@ h1, h2, h3, h4 {
   color: #000;
 }
 
+.accent {
+  color: $accent-color;
+}
+
 .container {
   &.pad {
     &.top {
@@ -119,6 +123,10 @@ figure {
   text-transform: uppercase;
   padding: 12px 18px;
   box-shadow: $shadow-default;
+
+  + .btn {
+    margin-left: 5px;
+  }
 }
 
 .btn-link {
