--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -11,6 +11,7 @@
 // Web
 @import "components/global";
 @import "components/addons";
+@import "components/lightbox";
 @import "components/activities";
 @import "components/mainmenu";
 @import "components/welcome";
