--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -12,6 +12,6 @@
 @import "components/global";
 @import "components/addons";
 @import "components/lightbox";
-@import "components/activities";
-@import "components/mainmenu";
-@import "components/welcome";
+@import "pages/activities";
+@import "pages/mainmenu";
+@import "pages/welcome";
