--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -12,7 +12,6 @@
 @import "components/global";
 @import "components/addons";
 @import "components/lightbox";
-@import "pages/activities";
-@import "pages/mainmenu";
-@import "pages/welcome";
-@import "pages/admin";
+@import "components/activities";
+@import "components/mainmenu";
+@import "components/welcome";
