--- a/resources/assets/sass/components/_global.scss
+++ b/resources/assets/sass/components/_global.scss
@@ -138,3 +138,9 @@ figure {
     margin-top: $line-height-computed/4;
   }
 }
+
+@media print {
+.print-none {
+    display: none !important;
+  }
+}
