created list view, added to nav

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -17,3 +17,5 @@
 @import "pages/welcome";
 @import "pages/admin";
 @import "pages/moderation";
+@import "pages/idea-list";
+@import "pages/idea-detail";
