--- a/resources/assets/sass/components/_global.scss
+++ b/resources/assets/sass/components/_global.scss
@@ -96,6 +96,24 @@ h1, h2, h3, h4 {
     h3:first-child, h4:first-child {
       margin-top: $line-height-computed / 2;
     }
+
+    &#idea.has-img {
+      #text {
+        float: none;
+        width: 100%;
+      }
+
+      #img {
+        float: none;
+        width: 100%;
+        padding-top: $padding-base-vertical;
+
+        img {
+          @extend .img-responsive;
+          float: none;
+        }
+      }
+    }
   }
 }
 
@@ -145,6 +163,29 @@ figure {
   .btn + .btn {
     margin-top: 0;
     margin-left: 5px;
+  }
+
+  .list-group .list-group-item#idea.has-img {
+    #text {
+      float: left;
+      width: 65%;
+      margin-right: 5%;
+    }
+
+    #img {
+      float: left;
+      width: 30%;
+      padding-top: 0;
+
+      img {
+        max-height: 250px;
+        float: right;
+
+        &.small {
+          max-height: 210px;
+        }
+      }
+    }
   }
 }
 
