--- a/resources/assets/sass/pages/_idea-detail.scss
+++ b/resources/assets/sass/pages/_idea-detail.scss
@@ -1,4 +1,6 @@
 #idea-detail {
+	$grid-gutter-width: 20px;
+
 	h1 + h4 {
 		margin-bottom: $line-height-computed;
 		line-height: 1.2;
@@ -13,6 +15,11 @@
 		.text {
 			font-size: 125%;
 		}
+	}
+
+	.row {
+		margin-left: -$grid-gutter-width/2;
+		margin-right: -$grid-gutter-width/2;
 	}
 
 	/* fluid 5 columns */
@@ -31,6 +38,8 @@
 
 @media screen and (min-width: 768px) {
 	#idea-detail {
+		$grid-gutter-width: 20px;
+
 		/* fluid 5 columns */
 		.grid-sizer,
 		.grid-item {
@@ -45,14 +54,16 @@
 
 @media screen and (min-width: 992px) {
 	#idea-detail {
+		$grid-gutter-width: 20px;
+		
 		/* fluid 5 columns */
 		.grid-sizer,
 		.grid-item {
-			width: 33.33%;
+			width: 25%;
 			padding: 0 $grid-gutter-width/2;
 
 			/* 2 columns */
-			&.width2 { width: 66.66%; }
+			&.width2 { width: 50%; }
 		}
 	}
 }
