combined feedbacks and links on idea detail

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -12,6 +12,7 @@
 @import "components/global";
 @import "components/addons";
 @import "components/lightbox";
+@import "components/masonry";
 @import "pages/activities";
 @import "pages/mainmenu";
 @import "pages/welcome";
