--- a/resources/assets/sass/components/_global.scss
+++ b/resources/assets/sass/components/_global.scss
@@ -96,23 +96,23 @@ h1, h2, h3, h4 {
     h3:first-child, h4:first-child {
       margin-top: $line-height-computed / 2;
     }
+  }
+}
 
-    &#idea.has-img {
-      #text {
-        float: none;
-        width: 100%;
-      }
+#idea.has-img {
+  #text {
+    float: none;
+    width: 100%;
+  }
 
-      #img {
-        float: none;
-        width: 100%;
-        padding-top: $padding-base-vertical;
+  #img {
+    float: none;
+    width: 100%;
+    padding-top: $padding-base-vertical;
 
-        img {
-          @extend .img-responsive;
-          float: none;
-        }
-      }
+    img {
+      @extend .img-responsive;
+      float: none;
     }
   }
 }
@@ -165,7 +165,7 @@ figure {
     margin-left: 5px;
   }
 
-  .list-group .list-group-item#idea.has-img {
+  #idea.has-img {
     #text {
       float: left;
       width: 65%;
@@ -176,6 +176,7 @@ figure {
       float: left;
       width: 30%;
       padding-top: 0;
+      margin-top: $line-height-computed/2;
 
       img {
         max-height: 250px;
