updates to idea detail and list views

--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -53,3 +53,7 @@ $panel-border-radius: 6px;
 
 // Shadows
 $shadow-default: 0 4px 8px 0 rgba(0, 0, 0, 0.2); //, 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+// Breakpoints
+$breakpoints: ('small': 768px, 'medium': 992px, 'large': 1200px) !default;
+$im-no-media-breakpoint: 'desktop' !default;
