--- a/resources/assets/sass/components/_addons.scss
+++ b/resources/assets/sass/components/_addons.scss
@@ -1,31 +1,28 @@
 a.panel-link {
   text-decoration: none;
   color: inherit;
-}
 
-a.panel-link .list-group {
-  box-shadow: $shadow-default;
-  border-radius: 4px;
-}
+  .list-group,
+  .list-group-item {
+    box-shadow: $shadow-default;
+    border-radius: 4px;
+  }
 
-a.panel-link .panel:hover .panel-body {
-  background-color: #eee;
-}
-
-a.panel-link .panel:hover.panel-default .panel-heading {
-  background-color: #eee;
-}
-
-a.panel-link .panel-heading:hover {
-  background-color: #eee;
-}
-
-a.panel-link:hover .list-group-item {
+  .panel:hover .panel-body {
     background-color: #eee;
-}
+  }
 
-.list-group a.panel-link:hover .list-group-item {
+  .panel:hover.panel-default .panel-heading {
     background-color: #eee;
+  }
+
+  .panel-heading:hover {
+    background-color: #eee;
+  }
+
+    &:hover .list-group-item {
+      background-color: #eee;
+  }
 }
 
 .idea-img {
@@ -40,6 +37,11 @@ a.panel-link:hover .list-group-item {
 
 .smaller-txt {
   font-size: 87.5%;
+}
+
+a.btn.disabled,
+a.btn-link.disabled {
+  // cursor: not-allowed;
 }
 
 /*.footer {
