fix rating padding

--- a/resources/assets/sass/pages/_activities.scss
+++ b/resources/assets/sass/pages/_activities.scss
@@ -104,6 +104,10 @@
 			}
 		}
 
+		#rating .row:last-child {
+			margin-top: $padding-large-vertical;
+		}
+
 		#actions {
 		padding-top: $padding-large-vertical;
 
