update welcome background image

--- a/resources/assets/sass/pages/_welcome.scss
+++ b/resources/assets/sass/pages/_welcome.scss
@@ -3,7 +3,7 @@ body#welcome {
     margin-bottom: 0;
 
     .bkg-img {
-    	background-image: url("/img/14stStreetWorkshop1.jpg");
+    	background-image: url("/img/WorkshoImage2.png");
     	background-repeat: no-repeat;
     	background-size: cover;
     	background-position: center;
@@ -87,7 +87,7 @@ body#welcome {
 		}
 
 	    .bkg-img {
-	    	background-image: url("/img/14stStreetWorkshop1.jpg");
+	    	background-image: url("/img/WorkshopImage2.png");
 	    	background-repeat: no-repeat;
 	    	background-size: cover;
 	    	background-position: center;
