changed styling and layout of "view additional images" bin

--- a/resources/assets/sass/pages/_activities.scss
+++ b/resources/assets/sass/pages/_activities.scss
@@ -75,6 +75,10 @@
 				p + p {
 					padding-top: $padding-base-vertical;
 				}
+
+				button {
+					margin-top: $padding-base-vertical;
+				}
 			}
 
 			&:first-child {
